# Lumen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  imgui.ini
.VSCodeCounter/2025-01-30_13-49-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/UI/Style/: Dark.json
lib/ImGuiFileDialog/: CMakeLists.txt
lib/ImGuizmo/: CMakeLists.txt
lib/enet/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imconfig.h
lib/lua/: CMakeLists.txt
lib/raylib/: CMakeOptions.txt
lib/rlImGui/: CMakeLists.txt  rlImGui.cpp  rlImGui.h
lib/sol2/: CMakeLists.txt
lib/yaml/: CMakeLists.txt
src/Lumen/Application/: Application.cpp  Application.hpp  ApplicationArgs.hpp  ApplicationArgsSerializer.cpp  ApplicationArgsSerializer.hpp  ApplicationMode.hpp  CLIParser.cpp  CLIParser.hpp  CLIResult.hpp  DefaultModule.cpp  DefaultModule.hpp  EngineInitializer.cpp  EngineInitializer.hpp  EngineModule.hpp  Main.cpp  Main.hpp  Window.cpp  Window.hpp  WindowArgs.hpp  WindowFlags.hpp
src/Lumen/Asset/: Asset.cpp  Asset.hpp  AssetEntry.hpp  AssetExtensionMap.cpp  AssetExtensionMap.hpp  AssetHandle.hpp  AssetImporter.cpp  AssetImporter.hpp  AssetImporterRegistry.cpp  AssetImporterRegistry.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager.inl  AssetManagerSerializer.cpp  AssetManagerSerializer.hpp  AssetMetadata.cpp  AssetMetadata.hpp  AssetStatus.hpp  AssetType.hpp
src/Lumen/Audio/: Audio.cpp  Audio.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioStream.cpp  AudioStream.hpp  AudioType.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp  Wave.cpp  Wave.hpp
src/Lumen/Concurrent/: ThreadPool.cpp  ThreadPool.hpp  ThreadPool.inl
src/Lumen/Container/: Array.hpp  Array.inl  ConcurrentQueue.hpp  ConcurrentQueue.inl  FixedVector.hpp  FixedVector.inl  String.hpp  Vector.hpp  Vector.inl
src/Lumen/Core/: Action.cpp  Action.hpp  Application.cpp  Application.hpp  Debug.cpp  Debug.hpp  Enum.hpp  Function.inl  Input.cpp  Input.hpp  InputCode.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Main.cpp  Main.hpp  Memory.hpp  Time.cpp  Time.hpp  UUID.cpp  UUID.hpp  Window.cpp  Window.hpp  WindowArgs.hpp  WindowFlags.hpp
src/Lumen/Editor/: EditorLayer.cpp  EditorLayer.hpp
src/Lumen/Event/: Action.hpp  ApplicationEvent.cpp  ApplicationEvent.hpp  ApplicationListener.cpp  ApplicationListener.hpp  Event.cpp  Event.hpp  EventBus.cpp  EventBus.hpp  EventBus.inl  EventDispatcher.cpp  EventDispatcher.hpp  EventQueue.cpp  EventQueue.hpp  FileEvent.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  KeyboardListener.cpp  KeyboardListener.hpp  LayerEvent.cpp  LayerEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  MouseListener.cpp  MouseListener.hpp  NetworkEvent.hpp  PhysicsEvent2D.cpp  PhysicsEvent2D.hpp  PublishMode.hpp  SceneEvent.cpp  SceneEvent.hpp  WindowEvent.cpp  WindowEvent.hpp
src/Lumen/File/: DirectoryEntry.cpp  DirectoryEntry.hpp  DirectoryIterator.cpp  DirectoryIterator.hpp  FileDialog.cpp  FileDialog.hpp  FileSize.cpp  FileSize.hpp  FileSystem.cpp  FileSystem.hpp  FileWatcher.cpp  FileWatcher.hpp  Path.cpp  Path.hpp
src/Lumen/Graphics/: Bone.cpp  Bone.hpp  Color.cpp  Color.hpp  Color.inl  Font.cpp  Font.hpp  Image.cpp  Image.hpp  ImageFactory.cpp  ImageFactory.hpp  Material.cpp  Material.hpp  MaterialMap.cpp  MaterialMap.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Model.cpp  Model.hpp  ModelAnimation.cpp  ModelAnimation.hpp  RenderTexture.cpp  RenderTexture.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Lumen/Input/: GamepadCode.hpp  Input.cpp  Input.hpp  InputAction.cpp  InputAction.hpp  InputActionMap.cpp  InputActionMap.hpp  InputActionPhase.hpp  InputActionType.hpp  InputBinding.cpp  InputBinding.hpp  InputComposite.cpp  InputComposite.hpp  InputDevice.hpp  InputValue.cpp  InputValue.hpp  InputValueType.hpp  KeyCode.hpp  MouseCode.hpp  MouseCursor.hpp
src/Lumen/Layer/: DebugLayer.cpp  DebugLayer.hpp  GameLayer.cpp  GameLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
src/Lumen/Log/: Debug.cpp  Debug.hpp  Log.cpp  Log.hpp
src/Lumen/Math/: BoundingBox.cpp  BoundingBox.hpp  BoundingBox.inl  Math.cpp  Math.hpp  Math.inl  Matrix.cpp  Matrix.hpp  Matrix4.cpp  Matrix4.hpp  Matrix4.inl  Quaternion.cpp  Quaternion.hpp  Quaternion.inl  Rectangle.cpp  Rectangle.hpp  Rectangle.inl  Vector.cpp  Vector.hpp  Vector2.cpp  Vector2.hpp  Vector2.inl  Vector3.cpp  Vector3.hpp  Vector3.inl  Vector4.cpp  Vector4.hpp  Vector4.inl
src/Lumen/Memory/: Buffer.cpp  Buffer.hpp  Buffer.inl  Ref.hpp  Scope.hpp  Weak.hpp
src/Lumen/Meta/: MetaAny.cpp  MetaAny.hpp  MetaAny.inl  MetaContext.cpp  MetaContext.hpp  MetaData.cpp  MetaData.hpp  MetaFactory.hpp  MetaFactory.inl  MetaFunction.cpp  MetaFunction.hpp  MetaID.hpp  MetaRegistry.cpp  MetaRegistry.hpp  MetaRegistry.inl  MetaType.cpp  MetaType.hpp  MetaType.inl
src/Lumen/Network/: Address.cpp  Address.hpp  Channel.cpp  Channel.hpp  ChannelType.hpp  Host.cpp  Host.hpp  Network.cpp  Network.hpp  Packet.cpp  Packet.hpp  PacketFlags.hpp  Peer.cpp  Peer.hpp  PeerState.hpp
(+525 files in other folders)
